# moviepy-cli

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
moviepy_cli/: __init__.py
